--- a/src/SillyChat/SillyChat.yaml
+++ b/src/SillyChat/SillyChat.yaml
@@ -3,7 +3,7 @@ author: kalilistic, maintained by khayle
 punchline: Make chat more fun with translations like pirate and urianger.
 description: |-
     Allows you to translate player and NPC chat messages/bubbles.
-    Supported languages include: Pirate, Urianger, Leet, Pig Latin, and Turkey.
+    Supported languages include: Pirate, Urianger, Leet, Pig Latin, Turkey, Moogle & Chocobo.
 tags:
     - chat
     - owo
