--- a/src/SillyChat/SillyChat.csproj
+++ b/src/SillyChat/SillyChat.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Dalamud.NET.Sdk/11.0.0">
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
 	<PropertyGroup>
-		<Version>1.7.1.0</Version>
+		<Version>1.7.1.1</Version>
 		<Title>SillyChat</Title>
 		<Authors>kalilistic, maintained by khayle</Authors>
-		<TargetFramework>net8.0-windows8.0</TargetFramework>
+		<TargetFramework>net9.0-windows</TargetFramework>
 		<Platforms>x64</Platforms>
 		<LangVersion>latest</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
