--- a/src/SillyChat.Test/SillyChat.Test.csproj
+++ b/src/SillyChat.Test/SillyChat.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
 	<PropertyGroup>
         <TargetFramework>net9.0-windows</TargetFramework>
 		<Platforms>x64</Platforms>
@@ -12,18 +12,6 @@
 				$(MSBuildWarningsAsMessages);MSB3277
 			</MSBuildWarningsAsMessages>
 	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-		<PackageReference Include="xunit" Version="2.9.2" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="6.0.2">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\SillyChat\SillyChat.csproj" />
 	</ItemGroup>
